<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="4dip"
  android:background="@color/green_dark"
>

	<Button
		android:id="@+id/btn_openBack"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/tx_back"
		android:drawableLeft="@android:drawable/ic_menu_revert"
		android:onClick="menueAktion"
	/>

  	<EditText
  		android:id="@+id/tx_openFileTxt"
  		android:layout_width="match_parent"
  		android:layout_height="wrap_content"
  		android:text="@string/standardPath"
  		android:inputType="textNoSuggestions|textVisiblePassword"
  	/>

	<Button
		android:id="@+id/btn_openOpenFile"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/tx_dateioeffnen"
		android:drawableLeft="@android:drawable/ic_menu_add"
		android:onClick="menueAktion"
	/>
    
</LinearLayout>
