<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="4dip"
    android:background="@color/green_dark"
    >

	<ImageView
		android:id="@+id/img_mainTitle"
		android:src="@drawable/title"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:layout_weight="1"
		android:layout_gravity="center"
	/>

	<ScrollView
		android:id="@+id/scr_Question"
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	>
	
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dip"
    android:background="@color/green_dark"
    >

		<Button
			android:id="@+id/btn_mainStart"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_weight="1"
			android:layout_marginTop="20dip"
			android:text="@string/tx_start"
			android:onClick="menueAktion"
		/>
		
		<Button
			android:id="@+id/btn_mainFavorites"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_weight="1"
			android:text="@string/tx_favorites"
			android:onClick="menueAktion"
		/>
		
		<Button
			android:id="@+id/btn_mainSettings"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_weight="1"
			android:text="@string/tx_settings"
			android:onClick="menueAktion"
		/>
		
		<Button
			android:id="@+id/btn_mainExit"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_weight="1"
			android:text="@string/tx_exit"
			android:onClick="menueAktion"
		/>
		
		<TextView 
			android:id="@+id/tx_Version"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_weight="1"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="Version x.x"
			/>
			
	</LinearLayout>
		
	</ScrollView>

</LinearLayout>
